--- a/_posts/2022-12-25-apple.md
+++ b/_posts/2022-12-25-apple.md
@@ -2,7 +2,6 @@
 title: عنوان مقاله تستی
 layout: post
 date: 2022-12-31 15:26 +0330
-lng_pair: id_11
 author: aydin
 category: test
 keywords: سیب
@@ -24,5 +23,5 @@ faq:
 - question: سوال 2
   answer: ج2
 ---
-
+شو همره بلبل به ره هر مهوش   شکر به ترازوی وزارت برکش
 <figure role="group"><img src=":apple.jpg" width="750"  height="500" alt="yyyyyy" title="fffffff" /><figcaption>hhhhhhh</figcaption></figure>
