--- a/_posts/2022-12-25-apple.md
+++ b/_posts/2022-12-25-apple.md
@@ -36,4 +36,5 @@ faq:
 
 [ایرانشهر](https://iranshahr.no/)
 
-![](http://iranshahr.no/wp-content/uploads/2023/03/مکانهای-گردشگری-پاکستان.jpg)
+<figure role="group"><img src=":iran.jpg" width="750"  height="500" alt="pic-iran" title="تصویر ایران" /><figcaption>تصویر ایران</figcaption></figure>
+
